# platform

./: .gitignore  README.md  demo.py  pyproject.toml  start-demo.cmd
docs/: design.md  quickstart.md
src/aisbench_platform/: __init__.py  server.py  storage.py
src/aisbench_platform/static/: app.js  excel-export.css  index.html  interactions.css  monitor.css  perf-compare.css  perf-compare.js  project-select.css  styles.css  tour.css
tests/: check_monitor_zoom.py  check_perf_dimensions.py  find_unbalanced.py  test_storage.py
